--- a/src/App.scss
+++ b/src/App.scss
@@ -69,11 +69,66 @@ $generic-bg: #1da1f2;
 
 //Darkmode
 .darkmode {
+  nav {
+    color: rgba(255, 255, 255, 0.87) !important;
+  }
   header {
     -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .15);
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .15);
+    // background-color: #3d3d3d;
     background-color: #282828;
     border-color: transparent;
+  }
+  .sidebar {
+    background-color: #282828;
+    border-color: transparent;
+    span {
+      color: rgba(255, 255, 255, 0.87);
+    }
+    li:hover{
+      background-color: #363636;
+    }
+    .active {
+      background-color: #363636;
+    }
+    &__middle {
+      border-color: hsla(0,0%,100%,.1);
+      h2 {
+        color: rgba(255, 255, 255, 0.87);
+      }
+    }
+    .add-project {
+      &__plus {
+        color: $generic-bg;
+      }
+      &__input {
+        background-color: #3d3d3d;
+        color: rgba(255, 255, 255, 0.87);
+        label {
+          color: rgba(255, 255, 255, 0.87);
+        }
+        input {
+          background-color: #1e1e1e;
+          color: hsla(0,0%,100%,.87);
+        }
+      }
+    }
+  }
+  .tasks {
+    background-color: #1E1E1E;
+    border-color: transparent;
+    color: rgba(255, 255, 255, 0.87);
+    input {
+      color: hsla(0,0%,100%,.87);
+      background-color: #171717;
+      border-color: hsla(0,0%,100%,.1);
+    }
+    li {
+      border-color: hsla(0,0%,100%,.1);;
+    }
+    .add-task__cancel:hover {
+      color: rgba(255, 255, 255, 0.87);
+    }
   }
 }
 
@@ -88,6 +143,7 @@ header {
   top: 0;
   width: 100%;
   height: 3rem;
+  transition: .4s ease-out;
 
   @include mq('900px'){
     padding: 0 10px;
@@ -181,6 +237,12 @@ header {
   .sidebar__project {
     display: none;
   }
+  .sidebar__middle {
+    display: none;
+  }
+  .add-project {
+    display: none;
+  }
 }
 
 //Sidebar
@@ -213,6 +275,8 @@ header {
       display: flex;
       align-items: center;
       padding: 0 .5rem;
+      border-radius: 3px;
+      // margin-right: .2rem;
 
       &:hover {
         background-color: #fff;
@@ -282,6 +346,7 @@ header {
     width: 100%;
     display: flex;
     align-items: center;
+    border-radius: 3px;
 
     &.active {
       background-color: white;
@@ -577,7 +642,6 @@ header {
     font-weight: 100;
     margin-right: 1rem;
     color: $generic-bg;
-    padding-bottom: .1rem;
   }
 
   p {
