--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Pacifico&display=swap');
 
 //General Settings
 html {
@@ -102,13 +103,14 @@ $generic-bg: #1da1f2;
         color: $generic-bg;
       }
       &__input {
-        background-color: #3d3d3d;
+        background-color: #282828;
+        box-shadow: rgba(0, 0, 0, .12) 0px 0px 0px 1px, rgba(0, 0, 0, .24) 0px 2px 5px;
         color: rgba(255, 255, 255, 0.87);
         label {
           color: rgba(255, 255, 255, 0.87);
         }
         input {
-          background-color: #1e1e1e;
+          background-color: #1b1b1b;
           color: hsla(0,0%,100%,.87);
         }
       }
@@ -130,6 +132,11 @@ $generic-bg: #1da1f2;
       color: rgba(255, 255, 255, 0.87);
     }
   }
+  .empty-state-illustration {
+    p{
+      color: rgba(255, 255, 255, 0.87);
+    }
+  }
 }
 
 //Header
@@ -144,7 +151,7 @@ header {
   width: 100%;
   height: 3rem;
   transition: .4s ease-out;
-
+  
   @include mq('900px'){
     padding: 0 10px;
   }
@@ -691,5 +698,25 @@ header {
 
   &__cancel:hover {
     text-decoration: underline;
+  }
+}
+
+.empty-state-illustration {
+  margin: 5rem 15rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: Pacifico, sans-serif;
+  
+  img {
+    height: 15rem;
+    width: 18rem;
+  }
+
+  p {
+    font-size: 16px;
+    color: $generic-bg;
+    margin-top: .5rem;
   }
 }
