--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
 //General Settings
 html {
@@ -210,7 +210,7 @@ header {
             height: 2rem;
             display: flex;
             justify-content: center;
-
+          
             &:hover {
               border-radius: 3px;
               background-color: rgba(255, 255, 255, .2);
@@ -223,7 +223,7 @@ header {
               color: white;
               cursor: pointer;
             }
-
+            
             svg {
               height: 1.3rem;
               width: 1.3rem;
@@ -452,7 +452,7 @@ header {
   &__inner {
     height: 100%;
     width: 100%;
-    font-weight: 200;
+    font-weight: 300;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -468,6 +468,18 @@ header {
     justify-content: flex-end;
     width: 100%;
     height: 30%;
+    align-items: center;
+
+    &-delete {
+      @include button(50px);
+    }
+
+    &-cancel {
+      @include cancel();
+    }
+    &-cancel:hover{
+      text-decoration: underline;
+    }
 
     span {
       margin: 0 .5rem;
@@ -707,7 +719,7 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: Pacifico, sans-serif;
+  font-family: 'Pacifico', cursive;
 
   
   img {
@@ -718,7 +730,9 @@ header {
   p {
     font-size: 16px;
     color: $generic-bg;
+    letter-spacing: 2px;
     margin-top: .5rem;
+    color: #8cd0f9;
   }
   
   @include mq('900px'){
