--- a/src/App.scss
+++ b/src/App.scss
@@ -196,6 +196,12 @@ $generic-bg: #1da1f2;
       background-color: #363636;
     }
   }
+
+  .project-delete-modal {
+    background-color: #282828;
+    box-shadow: 0 10px 20px rgba(0,0,0,.19), 0 6px 6px rgba(0,0,0,.23);
+    color: rgba(255, 255, 255, 0.87);
+  }
 }
 
 //Header
@@ -506,7 +512,7 @@ header {
   top: 30%;
   left: 40%;
   border-radius: 5px;
-  padding: 2rem;
+  padding: 1.5rem 1rem;
 
   &__inner {
     height: 100%;
