--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -300,7 +300,7 @@ header {
   }
 }
 
-.darkmode {
+.lights-out {
   background-image: linear-gradient(180deg, transparent, #000 50%);
   height: calc(220vh);
   display: flex;
