--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -463,23 +463,14 @@ header {
       border-radius: 6px;
       margin-left: 5rem;
       cursor: pointer;
+      animation: glow 2s linear 0s infinite forwards;
+      transition: .4s ease-out;
     }
-  }
-}
 
-.footer {
-  width: 100%;
-  height: 2rem;
-  background-color: #000;
-  display: flex;
-  justify-content: center;
-  padding-top: .5rem;
-
-  p {
-    color: #333;
-    font-weight: 200;
-    font-size: 13px;
-    @include no-select();
+    @keyframes glow {
+      from { box-shadow: 0; }
+      to { box-shadow: 0px 0px 5px 5px $generic-bg; }
+    }
   }
 }
 
