--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -197,11 +197,16 @@ $generic-bg: #1da1f2;
     }
   }
 
-  // .project-delete-modal {
-  //   background-color: #282828;
-  //   box-shadow: 0 10px 20px rgba(0,0,0,.19), 0 6px 6px rgba(0,0,0,.23);
-  //   color: rgba(255, 255, 255, 0.87);
-  // }
+  .delete-project {
+    &__modal {
+      background-color: #282828;
+      box-shadow: 0 10px 20px rgba(0,0,0,.19), 0 6px 6px rgba(0,0,0,.23);
+      color: rgba(255, 255, 255, 0.87);
+      &-actions {
+        border-color: #333;
+      }
+    }
+  }
 }
 
 //Header
